<resources>
    <string name="app_name">BudgetApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">DAM 2023-2024</string>
    <string name="nav_header_subtitle">Grupa 1116</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="main_home_title">Home</string>
    <string name="main_contact_title">Contact</string>

    <string name="main_message">Optiunea %1$s a fost apasata!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contact_app_name">Student(Mares Vlad-Gabriel)</string>
    <string name="contact_version">Version 1.0</string>
    <string name="add_date">Date</string>
    <string name="add_amount">Amount</string>
    <string name="add_category">Category</string>
    <string name="add_details">Details</string>
    <string name="add_save">Save</string>
    <string name="add_fab_description">Add new Expense</string>
    <string name="expense_adapter_default_value">-</string>

    <string-array name="add_category_values">
        <item>GROCERIES</item>
        <item>LIVING</item>
        <item>HOLIDAY</item>
        <item>CLOTHES</item>
        <item>MISCELLANEOUS</item>
    </string-array>

    <string-array name="exchange_currency_values">
        <item>DOLLAR $</item>
        <item>EURO €</item>
        <item>BRITISH POUNDS £</item>
    </string-array>

    <string name="row_amount_template">%1s$%2s</string>
    <string name="row_details_template">Details:\n%1s</string>
    <string name="bal_total_balance">Total Balance</string>
    <string name="bal_total_balance_val">$0</string>
    <string name="add_budget_tv_what_is_total">What is your total budget?</string>
    <string name="add_budget_tiet_enter_amount">Enter amount</string>
    <string name="add_budget_btn_savee">Save</string>
    <string name="exchange_tv_enter_amount_label">Enter amount</string>
    <string name="exchange_tv_result_of_exchange_label">Result of exchange in RON</string>
    <string name="exchange_result_value">RON 0</string>
    <string name="exchange_btn_compute">Compute</string>
    <string name="home_fragment_tv_default_tb_value">$120</string>
    <string name="fragment_home_tv_income">Income</string>
    <string name="fragment_home_tv_default_income_val">$0</string>
    <string name="fragment_home_tv_expenses">Expenses</string>
    <string name="echange_currency">Currency</string>
    <string name="main_alert_message">Resetting will delete all your expenses!</string>
    <string name="main_alert_title">Are you sure?</string>
    <string name="main_alert_possitive_answ">Yes</string>
    <string name="main_alert_neg_answ">No</string>
    <string name="home_fragment_sv_hint_text">Type Category name...</string>

</resources>