<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.HomeFragment">

    <TextView
        android:id="@+id/bal_tv_total_balance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAlignment="center"
        android:text="@string/bal_total_balance"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/bal_tv_total_balance_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bal_tv_total_balance"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAlignment="center"
        android:text="@string/home_fragment_tv_default_tb_value"
        android:textStyle="bold"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/bal_tv_income"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bal_tv_total_balance_value"
        app:layout_constraintEnd_toStartOf="@id/bal_tv_expenses"
        android:text="@string/fragment_home_tv_income"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/bal_tv_income_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bal_tv_income"
        app:layout_constraintEnd_toStartOf="@+id/bal_tv_expenses_value"
        android:text="@string/fragment_home_tv_default_income_val"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textAlignment="center"/>
    <TextView
        android:id="@+id/bal_tv_expenses"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/bal_tv_income"
        app:layout_constraintTop_toBottomOf="@+id/bal_tv_total_balance_value"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/fragment_home_tv_expenses"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/bal_tv_expenses_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/bal_tv_income_value"
        app:layout_constraintTop_toBottomOf="@+id/bal_tv_expenses"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/fragment_home_tv_default_income_val"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="20sp"/>

    <androidx.appcompat.widget.SearchView
        android:id="@+id/home_sv_search_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bal_tv_expenses_value"
        app:layout_constraintBottom_toTopOf="@id/home_lv_expenses"
        app:iconifiedByDefault="false"
        app:queryHint="@string/home_fragment_sv_hint_text"
        />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/home_lv_expenses"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_sv_search_category"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>