<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddExpenseActivity">

  <com.google.android.material.textfield.TextInputLayout
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
      android:id="@+id/add_til_expense_date"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      android:layout_marginTop="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginEnd="8dp"
      >

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/add_tiet_expense_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/add_va_date"
        android:drawablePadding="12dp"
        android:hint="@string/add_date"
        />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
      android:id="@+id/add_til_expense_amount"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@+id/add_til_expense_date"
      android:layout_marginTop="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginEnd="8dp"
      >

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/add_tiet_expense_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="12dp"
        android:drawableStart="@drawable/add_va_amount"
        android:hint="@string/add_amount"
        android:inputType="numberDecimal"/>
  </com.google.android.material.textfield.TextInputLayout>




  <TextView
      android:id="@+id/add_tv_category"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@+id/add_til_expense_amount"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:text="@string/add_category"
      android:layout_marginTop="8dp"
      android:layout_marginStart="12dp"
      android:layout_marginEnd="8dp"
      android:textSize="16sp"
      android:textStyle="bold"
      />

  <Spinner
      android:id="@+id/add_spinner_expense_category"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="10dp"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="10dp"
      android:minHeight="48dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/add_tv_category"
      />
  <com.google.android.material.textfield.TextInputLayout
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
      android:id="@+id/add_til_expense_details"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@+id/add_spinner_expense_category"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_marginTop="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginEnd="8dp"
      >

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/add_tiet_expense_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/add_va_details"
        android:drawablePadding="12sp"
        android:hint="@string/add_details" />
  </com.google.android.material.textfield.TextInputLayout>

  <androidx.appcompat.widget.AppCompatButton
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/add_btn_save"
      android:backgroundTint="@color/orange_app"
      android:textColor="@color/white"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
      android:layout_marginBottom="8dp"
      android:text="@string/add_save"
    />


  </androidx.constraintlayout.widget.ConstraintLayout>