<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddBudgetActivity">

    <TextView
        android:id="@+id/budget_tv_budget_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_budget_tv_what_is_total"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/budget_til_budget_value"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/budget_til_budget_value"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/budget_tv_budget_label"
        app:layout_constraintBottom_toTopOf="@+id/budget_btn_save"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/budget_tiet_budget_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/add_va_amount"
            android:drawablePadding="12dp"
            android:inputType="numberDecimal"
            android:hint="@string/add_budget_tiet_enter_amount" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/budget_btn_save"
        android:backgroundTint="@color/orange_app"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/budget_til_budget_value"
        android:layout_marginBottom="8dp"
        android:text="@string/add_budget_btn_savee"
        />


</androidx.constraintlayout.widget.ConstraintLayout>